<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeliveryBoxService</string>
    <string name="action_settings">Settings</string>
    <string name="strButton">OpenBox</string>
    <string name="strText">http://120.27.45.163:80/</string>
    <string name="reg_btn_title">注册</string>
    
    <string name="okButton">OK</string>
    <string name="open_box_gpio_fail">Open box failure, GPIO exception</string>
    <string name="init_gpio_fail">Init GPIO exception</string>

    <string name="please_enter_right_phone_number">*请输入正确的手机号码</string>
    <string name="please_enter_phone_number">*请输入手机号码</string>
    <string name="please_enter_verify_code">*请输入验证码</string>
    <string name="please_enter_right_verify_code">*请输入正确的验证码</string>
    <string name="no_network">没有网络，请联系管理员！</string>
    <string name="congratulation">恭喜你</string>
    <string name="sorry">很遗憾</string>
    <string name="tip">提示</string>
    <string name="success_msg">格子已经为您打开，请取出您的快递，谢谢使用！</string>
    <string name="no_your_package">该柜子没有您的快递，请确认手机号是否正确！</string>
    <string name="verify_code_error">验证码错误，请输入正确的验证码！</string>
    <string name="connect_to_server_error">访问服务器出错啦</string>
    <string name="unknown_error">哦，出错了！</string>
    <string name="province_name">省</string>
    <string name="city_name">市</string>
    <string name="region_name">区</string>
    <string name="community_name">街道、小区</string>
    <string name="cabinet_name">柜子名称</string>
    <string name="small_count">副柜个数</string>

</resources>