<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<!-- 
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo" />
    </LinearLayout>
 -->
 
    <EditText
        android:id="@+id/province"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/province_name" />

    <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_name" />

    <EditText
        android:id="@+id/region"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/region_name" />
    
    <EditText
        android:id="@+id/community"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/community_name" />

    <EditText
        android:id="@+id/cabinetname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cabinet_name" />

    <EditText
        android:id="@+id/small_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/small_count" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn_title" />

</LinearLayout>